Kube Manifests/cortex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortex
  namespace: soc
  labels:
    app: cortex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cortex
  template:
    metadata:
      labels:
        app: cortex
    spec:
      serviceAccountName: cortex-sa
      containers:
        - name: cortex
          image: thehiveproject/cortex:4.0
          ports:
            - containerPort: 9001
              name: http
          volumeMounts:
            - name: cortex-data-pvc
              mountPath: /opt/cortex/data
            - name: cortex-analyzers-pvc
              mountPath: /opt/cortex/analyzers
            - name: cortex-shared-fs-claim
              mountPath: /opt/cortex/shared
            # Mount ConfigMap directly as application.conf
            - name: cortex-config
              mountPath: /opt/cortex/conf/application.conf
              subPath: application.conf
            - name: python-libs
              mountPath: /usr/local/lib/python3.11/site-packages
            - name: cortex-virustotal-config
              mountPath: /opt/cortex/analyzers/virustotal
              readOnly: true
            - name: cortex-responders-pvc
              mountPath: /opt/cortex/responders

          startupProbe:
            tcpSocket:
              port: 9001
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /
              port: 9001
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 9001
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
        # - name: python3-sidecar
        #   image: python:3.11
        #   command: ["sleep", "infinity"]
        #   volumeMounts:
        #     - name: cortex-analyzers-pvc
        #       mountPath: /opt/cortex/analyzers
        #        Sidecar to pull analyzers and responders
        - name: cortex-sidecar
          image: python:3.11-slim
          command: ["/bin/sh","-c"]
          args:
            - |
              [...]
          volumeMounts:
            - name: cortex-analyzers-pvc
              mountPath: /opt/cortex/analyzers
            - name: cortex-responders-pvc
              mountPath: /opt/cortex/responders

    
      volumes:
        - name: cortex-data-pvc
          persistentVolumeClaim:
            claimName: cortex-data-pvc
        - name: cortex-analyzers-pvc
          persistentVolumeClaim:
            claimName: cortex-analyzers-pvc
        - name: cortex-shared-fs-claim
          persistentVolumeClaim:
            claimName: cortex-shared-fs-claim
        - name: cortex-config
          configMap:
            name: cortex-config
        - name: python-libs
          emptyDir: {}
        - name: cortex-virustotal-config
          configMap:
            name: cortex-virustotal-config
        - name: cortex-responders-pvc
          persistentVolumeClaim:
            claimName: cortex-responders-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: cortex
  namespace: soc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.35
  selector:
    app: cortex
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
