Kube Manifests/elasticsearch_stateful+service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: soc
spec:
  serviceName: elasticsearch
  replicas: 1   # single-node for simplicity
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
        ports:
        - containerPort: 9200
        volumeMounts:
        - name: es-data
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: es-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
      storageClassName: local-path
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: soc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.34
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
