Kube Manifests/misp.yaml

# Gmail SMTP relay
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-mail
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-mail
  template:
    metadata:
      labels:
        app: misp-mail
    spec:
      containers:
      - name: smtp
        image: registry.gitlab.com/egos-tech/smtp:latest
        ports:
        - containerPort: 25

---
apiVersion: v1
kind: Service
metadata:
  name: misp-mail
  namespace: soc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.38
  ports:
  - port: 25
    targetPort: 25
  selector:
    app: misp-mail
---
# Redis (Valkey)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-redis
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-redis
  template:
    metadata:
      labels:
        app: misp-redis
    spec:
      containers:
      - name: valkey
        image: valkey/valkey:7.2
        command:
        - sh
        - -c
        - |
          if [ "$ENABLE_REDIS_EMPTY_PASSWORD" = "true" ]; then
            exec valkey-server
          else
            exec valkey-server --requirepass "$REDIS_PASSWORD"
          fi
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: misp-redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: misp-redis
  namespace: soc
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: misp-redis

---
# MariaDB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-db
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-db
  template:
    metadata:
      labels:
        app: misp-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.11
        args:
        - "--innodb-buffer-pool-size=2048M"
        - "--innodb-change-buffering=none"
        - "--innodb-io-capacity=1000"
        - "--innodb-io-capacity-max=2000"
        - "--innodb-log-file-size=600M"
        - "--innodb-read-io-threads=16"
        - "--innodb-stats-persistent=ON"
        - "--innodb-write-io-threads=4"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: misp-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: misp-db
  namespace: soc
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: misp-db

---
# MISP Core
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-core
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-core
  template:
    metadata:
      labels:
        app: misp-core
    spec:
      containers:
      - name: misp-core
        image: ghcr.io/misp/misp-docker/misp-core:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: misp-configs
          mountPath: /var/www/MISP/app/Config
        - name: misp-logs
          mountPath: /var/www/MISP/app/tmp/logs
        - name: misp-files
          mountPath: /var/www/MISP/app/files
        - name: misp-ssl
          mountPath: /etc/nginx/certs
        - name: misp-gnupg
          mountPath: /var/www/MISP/.gnupg
        - name: misp-database-config
          mountPath: /var/www/MISP/app/Config/database.php
          subPath: database.php
 
        livenessProbe:
          httpGet:
            path: /users/heartbeat
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /users/heartbeat
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 30
      volumes:
      - name: misp-configs
        persistentVolumeClaim:
          claimName: misp-configs-pvc
      - name: misp-logs
        persistentVolumeClaim:
          claimName: misp-logs-pvc
      - name: misp-files
        persistentVolumeClaim:
          claimName: misp-files-pvc
      - name: misp-ssl
        persistentVolumeClaim:
          claimName: misp-ssl-pvc
      - name: misp-gnupg
        persistentVolumeClaim:
          claimName: misp-gnupg-pvc
      - name: misp-database-config
        configMap:
          name: misp-database-config
   
---
apiVersion: v1
kind: Service
metadata:
  name: misp-core
  namespace: soc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.37
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
  selector:
    selector:
    app: misp-core

---
# MISP Modules
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-modules
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-modules
  template:
    metadata:
      labels:
        app: misp-modules
    spec:
      containers:
      - name: misp-modules
        image: ghcr.io/misp/misp-docker/misp-modules:latest
        ports:
        - containerPort: 6666
        livenessProbe:
          tcpSocket:
            port: 6666
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 6666
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: custom-action
          mountPath: /custom/action_mod
        - name: custom-expansion
          mountPath: /custom/expansion
        - name: custom-export
          mountPath: /custom/export_mod
        - name: custom-import
          mountPath: /custom/import_mod
      volumes:
      - name: custom-action
        emptyDir: {}
      - name: custom-expansion
        emptyDir: {}
      - name: custom-export
        emptyDir: {}
      - name: custom-import
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: misp-modules
  namespace: soc
spec:
  ports:
  - port: 6666
    targetPort: 6666
  selector:
    app: misp-modules

---
# MISP Guard
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-guard
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-guard
  template:
    metadata:
      labels:
        app: misp-guard
    spec:
      containers:
      - name: misp-guard
        image: ghcr.io/misp/misp-docker/misp-guard:latest
        ports:
        - containerPort: 8888
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 10
          periodSeconds: 120
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 10
          periodSeconds: 120
        volumeMounts:
        - name: guard-config
          mountPath: /config.json
          subPath: config.json
      volumes:
      - name: guard-config
        configMap:
          name: misp-guard-config

---
apiVersion: v1
kind: Service
metadata:
  name: misp-guard
  namespace: soc
spec:
  type: ClusterIP
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: misp-guard
