Kube Manifests/shuffle-helm-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shuffle-frontend
  namespace: shuffle
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.41
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/name: shuffle
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
