Kube Manifests/smtp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misp-mail
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misp-mail
  template:
    metadata:
      labels:
        app: misp-mail
    spec:
      containers:
      - name: smtp
        image: registry.gitlab.com/egos-tech/smtp:latest
        ports:
        - containerPort: 25
          name: smtp-internal
        volumeMounts:
        - name: ca-certs
          mountPath: /etc/ssl/certs
          readOnly: true
      volumes:
      - name: ca-certs
        hostPath:
          path: /etc/ssl/certs
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: misp-mail
  namespace: soc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.38
  ports:
  - port: 25
    targetPort: 25
    protocol: TCP
    name: smtp-internal
  selector:
    app: misp-mail
