Kube Manifests/theHiveCE-backend.yaml
###############################################
# TheHive CE Backend Stack (Cassandra + ES 6) #
###############################################

---
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  namespace: soc
spec:
  clusterIP: None
  ports:
    - port: 9042
      name: cql
  selector:
    app: cassandra

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  namespace: soc
spec:
  serviceName: cassandra
  replicas: 1
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
        - name: cassandra
          image: cassandra:3.11.15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9042
          volumeMounts:
            - name: cassandra-data
              mountPath: /var/lib/cassandra
  volumeClaimTemplates:
    - metadata:
        name: cassandra-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: soc
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
      name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:5.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: es-data
          persistentVolumeClaim:
            claimName: elasticsearch-data-pvc
