Kube Manifests/theHiveCE.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thehive
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thehive
  template:
    metadata:
      labels:
        app: thehive
    spec:
      containers:
        - name: thehive
          image: docker.io/thehiveproject/thehive:3.5.2-1
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 9000
            - name: kamon
              containerPort: 9095

          resources:
            requests:
              cpu: "1000m"
              memory: "2048Mi"
              ephemeral-storage: "4Gi"
            limits:
              cpu: "3000m"
              memory: "3584Mi"
              ephemeral-storage: "4Gi"

          volumeMounts:
            - name: thehive-data
              mountPath: /opt/thehive/data

      volumes:
        - name: thehive-data
          persistentVolumeClaim:
            claimName: thehive-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: thehive
  namespace: soc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.33
  selector:
    app: thehive
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: kamon
      port: 9095
      targetPort: 9095
