Kube Manifests/thehive.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thehive
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thehive
  template:
    metadata:
      labels:
        app: thehive
    spec:
      containers:
        - name: thehive
          image: strangebee/thehive:5.5
          ports:
            - containerPort: 9000
              name: http
          command: ["/opt/thehive/entrypoint"]
          args: 
            - "--no-config"
            - "--config-file"
            - "/etc/thehive/application.conf"

          volumeMounts:
            - name: thehive-config
              mountPath: /etc/thehive
            - name: thehive-data
              mountPath: /opt/thp/thehive/data
            - name: thehive-index
              mountPath: /opt/thp/thehive/index
         
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: 9000
            initialDelaySeconds: 300  # 5 minutes
            periodSeconds: 30
            timeoutSeconds: 10
              

          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 9000
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
            
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 9000
            initialDelaySeconds: 240
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
            
        - name: postfix
          image: alpine:3.19
          securityContext:
            runAsUser: 0
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          volumeMounts:
            - name: postfix-config
              mountPath: /etc/postfix-config
            - name: postfix-sasl
              mountPath: /etc/postfix-sasl
            - name: postfix-spool
              mountPath: /var/spool/postfix
             
                     
      volumes:
        - name: thehive-config
          configMap:
            name: thehive-config
        - name: thehive-data
          persistentVolumeClaim:
            claimName: thehive-data-pvc
        - name: thehive-index
          persistentVolumeClaim:
            claimName: thehive-index-pvc
        - name: postfix-config
          configMap:
            name: postfix-config
        - name: postfix-sasl
          secret:
            secretName: postfix-sasl
        - name: postfix-spool
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: thehive
  namespace: soc
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.200.33
  selector:
    app: thehive
  ports:
    - name: http
      port: 9000
      targetPort: 9000
