Kube Manifests/nginx.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: linuxserver/nginx:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 80
              name: "nginx-http"
            - containerPort: 443
              name: "nginx-https"
          readinessProbe:
            httpGet:
              path: /
              port: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          volumeMounts:
            - name: config
              mountPath: /config
            - name: www
              mountPath: /www
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nginx-config
        - name: www
          persistentVolumeClaim:
            claimName: nginx-www
# ---
#Service type 1 with Metal-lb only providing an external IP for lab.home.com. Manual Cert deployment via StepCA and no ingress rate limiting or allow lists
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx
#   namespace: nginx
# spec:
#   type: LoadBalancer
#   loadBalancerIP: 192.168.200.32
#   selector:
#     app: nginx
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
#     - name: https
#       protocol: TCP
#       port: 443
#       targetPort: 443

#Service type 2 with Nginx-ingress routing to lab.home.com. provides ACME certs via Cert-Manager, Ingress rate-limiting and IP allow-lists.
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: stepca-acme
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst: "20"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16,10.0.0.0/8"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - lab.home.com
    secretName: nginx-tls
  rules:
  - host: lab.home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
